testsuite/tests/typecheck/should_fail/T7778.hs
module T7778 where

v :: ((Num Int => Num) ()) => ()
v = v
