testsuite/tests/typecheck/should_fail/T7778.stderr

T7778.hs:3:7: error: [GHC-83865]
    • Expected kind ‘* -> Constraint’,
        but ‘Num Int => Num’ has kind ‘*’
    • In the type signature: v :: ((Num Int => Num) ()) => ()

T7778.hs:3:19: error: [GHC-83865]
    • Expecting one more argument to ‘Num’
      Expected a type, but ‘Num’ has kind ‘* -> Constraint’
    • In the type signature: v :: ((Num Int => Num) ()) => ()
